// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover snapshots should render Popover 1`] = `
<DocumentFragment>
  <div
    class="Popover Popover--light"
    data-test-dropdown="popover"
    data-test-popover=""
    style="left: 0px; top: 0px;"
  >
    <div
      class="Popover__item Popover__item--light"
      data-test-popover-item="0"
    >
      <div
        class="css-wcnq0t Popover__check-icon Popover__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-wcnq0t Popover__item-icon Popover__item-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-wcnq0t Popover__item-text Popover__item-text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="Popover__item Popover__item--light"
      data-test-popover-item="1"
    >
      <div
        class="css-wcnq0t Popover__check-icon Popover__check-icon--light Popover__check-icon--selected Popover__check-icon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-wcnq0t Popover__item-icon Popover__item-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-wcnq0t Popover__item-text Popover__item-text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="Popover__separator Popover__separator--light"
    />
  </div>
</DocumentFragment>
`;

exports[`Popover snapshots should render selected 1`] = `
<DocumentFragment>
  <div
    class="Popover Popover--light Popover--selected Popover--selected--light"
    data-test-dropdown="popover"
    data-test-popover=""
    style="left: 0px; top: 0px;"
  >
    <div
      class="Popover__item Popover__item--light"
      data-test-popover-item="0"
    >
      <div
        class="css-wcnq0t Popover__check-icon Popover__check-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-wcnq0t Popover__item-icon Popover__item-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-wcnq0t Popover__item-text Popover__item-text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="Popover__item Popover__item--light"
      data-test-popover-item="1"
    >
      <div
        class="css-wcnq0t Popover__check-icon Popover__check-icon--light Popover__check-icon--selected Popover__check-icon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="css-wcnq0t Popover__item-icon Popover__item-icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="css-wcnq0t Popover__item-text Popover__item-text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="Popover__separator Popover__separator--light"
    />
  </div>
</DocumentFragment>
`;
